tiendamusical reportes services, se genera configuracion inicial para servicios en pruebasWS http://localhost:8080/tiendamusical-reportes/devpredator/reportesWS/pruebasWS

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,36 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	version="3.1">
+	
+	<display-name>ArchetypeCreatedWebApplication</display-name>
+	
+	<!-- SE CONFIGURA SPRING EN EL CONTEXTO DEL WEB.XML Y SE CONFIGURA EL ESCUCHADOR -->
+	
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>WEB-INF/applicationContext-reporte.xml</param-value>
+	</context-param>
+	
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	
+	<!-- SE CONFIGURA EL SERVLET QUE RECIBIRA LAS PETICIONES HHTP DE LOS WEBSERVICES -->
+	<servlet>
+		<servlet-name>jersey-servlet</servlet-name>
+		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+		<init-param>
+			<param-name>jersey.config.server.provider.packages</param-name>
+			<param-value>com.devpredator.tiendamusicalreportes.ws</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
+	<servlet-mapping>
+		<servlet-name>jersey-servlet</servlet-name>
+		<url-pattern>/devpredator/*</url-pattern>
+	</servlet-mapping>
+	
+	
 </web-app>
