Project tienda musical servicios, se agrega funcionalidad para descargar archivo desde dropbox.

--- a/src/main/resources/config/application-reportes.properties
+++ b/src/main/resources/config/application-reportes.properties
@@ -1,4 +1,7 @@
 
+
+#::::::::::::::::::::::::::::PARAMETROS CONEXION BD::::::::::::::::::::::::::::
+
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://tiendamusical-instance.cgclzzc4pcst.us-east-1.rds.amazonaws.com/tienda_musical?serverTimezone=UTC
 spring.datasource.username = devpredator
@@ -8,4 +11,13 @@ spring.datasource.password = devpredator
 #Local.spring.datasource.url = jdbc:mysql://localhost:3306/tienda_musical?serverTimezone=UTC
 #Local.spring.datasource.username = root
 #Local.spring.datasource.password = admin
+
+#::::::::::::::::::::::::::::PARAMETROS CONEXION ASW::::::::::::::::::::::::::::
+
+
+
+#::::::::::::::::::::::::::::PARAMETROS DROPBOX API ::::::::::::::::::::::::::::
+spring.dropbox.access.token = sl.BLWjccSL-zvMuTZAukg0S7-8BzrXyJTV0JRAlEy8RVJ-ywgzS7bGiRLH8pcQcu8K-fNpLvneREFtXUaaM1MbbN2HTB2SybY4F_mLdaJnxjNVxuLn7h3oc6S3pt2juEmlWT_oPZ0
+spring.dropbox.directorio.reporte = /Reportes
+spring.dropbox.archivo.jrxml = /TiendaMusical-Reports.jrxml
 
