Project reportes: test ok envio de reporte a dropbox y envio de reporte pdf por mail a hotmal, aws ses simple email service

--- a/src/main/resources/config/application-reportes.properties
+++ b/src/main/resources/config/application-reportes.properties
@@ -12,12 +12,22 @@ spring.datasource.password = devpredator
 #Local.spring.datasource.username = root
 #Local.spring.datasource.password = admin
 
-#::::::::::::::::::::::::::::PARAMETROS CONEXION ASW::::::::::::::::::::::::::::
-
 
 
 #::::::::::::::::::::::::::::PARAMETROS DROPBOX API ::::::::::::::::::::::::::::
-spring.dropbox.access.token = sl.BLaOVsX8MEU1GsrAKanIEBNenPiozcv4WJLguRPMXPaNj2IvYNyQRflE-Gp1MRzNm0Q7o_xFpgFxI2HT1GZGbDNzXy_c9tx6AzEs5Zg2QyuYgBgLRvXRtxTkt172J6K-P2aM9zI
+spring.dropbox.access.token = sl.BLecW8NR88aOAfMzE1kGiea0McOC9SA3OlwCHehDb22fGGUvF_qsuksBG8AH_0bfCKlCLYYtZ-3A3st3KGuhZfwbNTQRSdfs2U6D5Acio48HF8kPt2A9dSJ_hMS7yTC2XhHkr7c
 spring.dropbox.directorio.reporte = /Reportes
 spring.dropbox.archivo.jrxml = /TiendaMusical-Reports.jrxml
+
+#::::::::::::::::::::::::::::PARAMETROS CONEXION ASW SMPT::::::::::::::::::::::::::::
+
+spring.mail.aws.smpt.host = email-smpt.us-east-2.amazonaws.com
+spring.mail.aws.smpt.user = AKIA54WFMYBVZVCZ4THR
+spring.mail.aws.smpt.password = 8LuQ5qeCWvcOuQuJA+nzuo8kBH8QGi11NQozpUkV
+spring.mail.aws.smpt.sender = julio.azocar@hotmail.com
+spring.mail.aws.smpt.port = 587
+spring.mail.aws.smpt.tls = true
+
+
+
 
